<resources>
    <string name="app_name">Task Master</string>
    <string name="do_something">Do Something</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="back">Back</string>
    <string name="total_tasks">Total Tasks :</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="task_title_detailPage"> Lorem Ipsum </string>
    <string name="lorem"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </string>
    <string name="my_tasks">My Tasks</string>
    <string name="code_review_and_practice_1_2_hours">Code Review and Practice (1-2 hours)</string>
    <string name="stay_updated_with_technology_news_30_minutes">Stay Updated with Technology News (30 minutes)</string>
    <string name="personal_project_development_2_3_hours">Personal Project Development (2-3 hours)</string>
    <string name="my_task" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_tool_bar">custom tool bar</string>
    <string name="task_status">Task Status</string>
    <string name="task_state" />
    <string name="team">Team</string>
</resources>