<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="239dp"
        android:layout_height="71dp"
        android:text="@string/add_tasks"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="143dp"
        android:layout_height="40dp"
        android:text="Task Status"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="33dp"
        android:text="@string/task_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="197dp"
        android:layout_height="43dp"
        android:text="@string/task_description"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/descriptionEdite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/do_something"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#857070"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/teamSpinner"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        tools:layout_editor_absoluteY="371dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="133dp"
        android:layout_height="33dp"
        android:text="@string/team"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/taskNameEdite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="My Task"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#857070"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="HardcodedText,MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="115dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="233dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:ignore="MissingConstraints,TextSizeCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteY="290dp" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/totalTasks" />

    <Button
        android:id="@+id/backButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addTaskButton"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddImage"
        app:layout_constraintVertical_bias="0.246"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/totalTasks"
        android:layout_width="140dp"
        android:layout_height="26dp"
        android:text="@string/total_tasks"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonAddImage"
        android:layout_width="136dp"
        android:layout_height="53dp"
        android:layout_marginBottom="148dp"
        android:text="Add Image"
        app:layout_constraintBottom_toTopOf="@+id/totalTasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.708"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/taskImageImageView"
        android:layout_width="123dp"
        android:layout_height="97dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAddImage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="460dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonDeletImage"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:text="Delete Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taskImageImageView"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddImage"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>